# stxxl

./: CMakeLists.txt
.github/workflows/: dockcross.yml  linux.yml  macos.yml  windows.yml
include/stxxl/bits/algo/: bid_adapter.h
tools/: CMakeLists.txt  benchmark_sort.cpp
